<resources>
    <string name="app_name">TMDb Movie &amp; TV Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="OpenDrawer">Open navigation Drawer</string>
    <string name="CloseDrawer">Close navigation Drawer</string>
    <string name="search">Search</string>
    <string name="movieonline">MovieOnline</string>
    <string name="collection">Collection</string>
    <string name="collection_includedes">Collection includedes</string>
    <string name="watchlist">Watchlist</string>
    <string name="cast_crew"><![CDATA[Cast & Crew]]></string>
    <string name="see_all">See all</string>
    <string name="videos">Videos</string>
    <string name="information">Information</string>
    <string name="recommended">Recommended</string>
    <string name="similar">Similar</string>
    <string name="biography">Biography</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="more_videos_are_not_found">More Videos are not found.</string>
    <string name="enter_any_movie_title">Enter any movie title..</string>
    <string name="no_results_found">No Results found.</string>
    <string name="trending_videos">Trending Videos</string>
    <string name="movie">Movies</string>
    <string name="tv">TV</string>
    <string name="popular">Popular</string>
    <string name="airing_today">Airing Today</string>
    <string name="top_rated">Top Rated</string>
    <string name="on_tv">On TV Shows</string>
    <string name="movie_videos">Movie Videos</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="tv_shows_videos">Tv Shows Videos</string>
    <string name="on_tv_">On TV</string>
    <string name="recent_search">Recent Search</string>
    <string name="empty_favorite_list">Empty Favorite List</string>
    <string name="tmdb_movies_tv_shows"><![CDATA[TMDb Movies & TV Shows]]></string>
    <string name="term_conditions"><![CDATA[Term & Conditions]]></string>
    <string name="privacy">Privacy</string>
    <string name="rate_us">Rate Us</string>
    <string name="share_app">Share App</string>
    <string name="report">Report Problem</string>
    <string name="people">People</string>
    <string name="favorite">Favorite</string>
    <string name="home">Home</string>
    <string name="by_coderaman">by coderAman</string>
</resources>